cmake_minimum_required(VERSION 2.6)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib)

MESSAGE (STATUS "This is CMAKE_CXX_FLAGS:" ${CMAKE_CXX_FLAGS})
MESSAGE (STATUS "This is CMAKE_CXX_FLAGS:" ${CMAKE_CXX_FLAGS})
MESSAGE (STATUS "This is CMAKE_CURRENT_SOURCE_DIR:" ${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main hello.a)

